# TestLeadToolbox

./: .gitignore  CMakeLists.txt
src/app/: ModuleLauncherPanel.cpp  ModuleLauncherPanel.h  ModuleManager.cpp  ModuleManager.h  mainwindow.cpp  mainwindow.h
src/modules/linkbudget/: LinkBudgetModel.cpp  LinkBudgetModel.h  LinkBudgetModule.cpp  LinkBudgetModule.h
src/modules/timeline/: AddEventDialog.cpp  AddEventDialog.h  AddEventDialog.ui  ArchivedEventsDialog.cpp  ArchivedEventsDialog.h  ArchivedEventsDialog.ui  AttachmentListWidget.cpp  AttachmentListWidget.h  AutoSaveManager.cpp  AutoSaveManager.h  ConfirmationDialog.h  CurrentDateMarker.cpp  CurrentDateMarker.h  DateRangeHighlight.cpp  DateRangeHighlight.h  EditEventDialog.cpp  EditEventDialog.h  EditEventDialog.ui  EventDetailsWidget.cpp  EventDetailsWidget.h  LaneAssigner.cpp  LaneAssigner.h  ScrollToDateDialog.cpp  ScrollToDateDialog.h  ScrollToDateDialog.ui  SetLookaheadRangeDialog.cpp  SetLookaheadRangeDialog.h  SetLookaheadRangeDialog.ui  SetTodayDateDialog.cpp  SetTodayDateDialog.h  SetTodayDateDialog.ui  TimelineCoordinateMapper.cpp  TimelineCoordinateMapper.h  TimelineDateScale.cpp  TimelineDateScale.h  TimelineExporter.cpp  TimelineExporter.h  TimelineItem.cpp  TimelineItem.h  TimelineLegend.cpp  (+25 more)
src/shared/interfaces/: IModule.h
src/shared/models/: AttachmentModel.cpp  AttachmentModel.h
